cleaned up pics

--- a/gallery.html
+++ b/gallery.html
@@ -217,12 +217,12 @@
       <!-- content is what we're have to make really big -->
           <div class="content">
         
-            <img class="slide-image" src="images/NP2012emailback1-26-1.jpg">
-            <img class="slide-image" src="images/NP2012emailfront1-26-1.jpg">
-            <img class="slide-image" src="images/showphoto1.jpg">
-            <img class="slide-image" src="images/showphoto2.jpg">
-            <img class="slide-image" src="images/url-2.jpeg">                   
-            <img class="slide-image" src="images/url.jpeg">                     
+            <img class="slide-image" src="images/slideshow1.jpg">
+            <img class="slide-image" src="images/slideshow2.jpg">
+            <img class="slide-image" src="images/slideshow3.jpg">
+            <img class="slide-image" src="images/slideshow4.jpg">
+            <img class="slide-image" src="images/slideshow5.jpeg">                   
+            <img class="slide-image" src="images/slideshow6.jpeg">                     
           </div>
         </div>
         <div class="container2">  
