--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>The Nanas and the Papas</title>  
+  <title>The Nanas and the Papas Gallery</title>  
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
     <!--script src="js/jquery.lint.js" type="text/javascript" charset="utf-8"></script-->
