--- a/gallery.html
+++ b/gallery.html
@@ -104,7 +104,7 @@
         left: 152px;
         width: 595px;
         height: 160px;
-        border: 1px solid blue;
+        border: 2px solid #FF5E33;
         float: left;
     }
     #header2{
