--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +22,7 @@
     }
 
     #site  {
-        background-color: #FFDE96;
+        background-color: blue;
         width:900px;
         font: 32px georgia;
         height:655px;
